# OReilly-2025-10October-python

./: OReilly - 2025-10October-15.html  OReilly - 2025-10October-15.ipynb  OReilly - 2025-10October-22.html  OReilly - 2025-10October-22.ipynb  OReilly - 2025-10October-29.html  OReilly - 2025-10October-29.ipynb  OReilly - 2025-11November-05.html  OReilly - 2025-11November-05.ipynb  OReilly - 2025-11November-12.ipynb  main.py  menu.py  myfile.txt  mymod.py  pyproject.toml
