[project]
name = "oreilly-2025-10october-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitautopush>=0.4.1",
    "jupyter>=1.1.1",
    "jupyter-core>=5.9.1",
    "marimo>=0.17.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "plotly>=6.3.1",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
]
